--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,8 @@ html {
  /* Medium and small screens (640px) */
  @media (min-width: 640px) {
    /* Style information will go here */
+        /* Style information will go here */
+
  }
  
  /* Large screens (1024px) */
