--- a/styles/main.css
+++ b/styles/main.css
@@ -54,3 +54,13 @@ html {
    /* Style information will go here */
      html { font-size: 120%; }
  }
+
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
