cp5 without imgs

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,7 +55,8 @@ html {
      cursor: pointer;
  }
  
- .links-container .navbar-link:hover {
+/*pseudo-selector :hover */
+.links-container .navbar-link:hover {
      color: rgb(233,50,117);
  }
 
